tests/snapshots/run_wpt_conformance__trtx_per-tensor_dequantizeLinear_for_int4_4D_tensor_with_float16_4D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js per-tensor dequantizeLinear for int4 4D tensor with float16 4D scale, trtx
 dequantizeLinear :: per-tensor dequantizeLinear for int4 4D tensor with float16 4D scale: index 0: actual=0 expected=-2.2402344 ulp=16507 tolerance=16
  inputs: dequantizeLinearInput: [0, -1, -6, 1]; dequantizeLinearScale: [1.1201171875, 4.6171875, 6.2421875, 3.841796875] (constant); dequantizeLinearZeroPoint: [2, -3, -5, 4] (constant)
  expected dequantizeLinearOutput: [-2.2402344, 9.234375, -6.2421875, -11.5234375]
  actual dequantizeLinearOutput: [0, -0, -0, 0]
  expected dequantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [-2.2402344, 9.234375] [-6.2421875, -11.5234375]
  actual dequantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [0, -0] [-0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i4[1, 1, 2, 2];
  }

  consts {
    operand_1: f16[1, 1, 2, 2] @bytes([123, 60, 158, 68, 62, 70, 175, 67]);
    operand_2: i4[1, 1, 2, 2] @bytes([210, 75]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
