tests/snapshots/run_wpt_conformance__trtx_per-tensor_dequantizeLinear_for_int4_4D_tensor_with_float32_4D_scale.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
dequantizeLinear.https.any.js per-tensor dequantizeLinear for int4 4D tensor with float32 4D scale, trtx
 dequantizeLinear :: per-tensor dequantizeLinear for int4 4D tensor with float32 4D scale: index 0: actual=0 expected=-2.2405496 ulp=1074750762 tolerance=16
  inputs: dequantizeLinearInput: [0, -1, -6, 1]; dequantizeLinearScale: [1.120274782180786, 4.617084980010986, 6.240549564361572, 3.841923713684082] (constant); dequantizeLinearZeroPoint: [2, -3, -5, 4] (constant)
  expected dequantizeLinearOutput: [-2.2405496, 9.23417, -6.2405496, -11.525771]
  actual dequantizeLinearOutput: [0, -0, -0, 0]
  expected dequantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [-2.2405496, 9.23417] [-6.2405496, -11.525771]
  actual dequantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [0, -0] [-0, 0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    dequantizeLinearInput: i4[1, 1, 2, 2];
  }

  consts {
    operand_1: f32[1, 1, 2, 2] @bytes([42, 101, 143, 63, 41, 191, 147, 64, 149, 178, 199, 64, 20, 226, 117, 64]);
    operand_2: i4[1, 1, 2, 2] @bytes([210, 75]);
  }

  nodes {
    [dequantizeLinearOutput] = dequantizeLinear(dequantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { dequantizeLinearOutput; }
}
