tests/snapshots/run_wpt_conformance__trtx_per-tensor_quantizeLinear_for_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
quantizeLinear.https.any.js per-tensor quantizeLinear for float32 4D tensor, trtx
 quantizeLinear :: per-tensor quantizeLinear for float32 4D tensor: index 0: actual=0 expected=119 tolerance=1
  inputs: quantizeLinearInput: [-2.549168109893799, -4.794857501983643, 8.413617134094238, 6.108623504638672]; quantizeLinearScale: [0.2800687253475189, 4.617084980010986, 0.2800687253475189, 4.617084980010986] (constant); quantizeLinearZeroPoint: [128, 128, 128, 128] (constant)
  expected quantizeLinearOutput: [119, 127, 158, 129]
  actual quantizeLinearOutput: [0, 0, 255, 255]
  expected quantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [119, 127] [158, 129]
  actual quantizeLinearOutput full nd:
(shape [1, 1, 2, 2])
  [0, 0] [255, 255]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    quantizeLinearInput: f32[1, 1, 2, 2];
  }

  consts {
    operand_1: f32[1, 1, 2, 2] @bytes([43, 101, 143, 62, 41, 191, 147, 64, 43, 101, 143, 62, 41, 191, 147, 64]);
    operand_2: u8[1, 1, 2, 2] @bytes([128, 128, 128, 128]);
  }

  nodes {
    [quantizeLinearOutput] = quantizeLinear(quantizeLinearInput, operand_1, operand_2, label="");
  }

  outputs { quantizeLinearOutput; }
}
