tests/snapshots/run_wpt_conformance__trtx_pow_float16_1D_base_tensor_and_1D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float16 1D base tensor and 1D integer exponent tensor",
    "trtx",
    "PASS",
)
