tests/snapshots/run_wpt_conformance__trtx_pow_float16_2D_base_tensor_and_2D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float16 2D base tensor and 2D integer exponent tensor",
    "trtx",
    "PASS",
)
